methods.basics.Methods.scala.error
Erreur de compilation :
Methods:17: error: not found: value nbPas
  for ( retour <- 1 to nbPas){
                       ^